--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="1"
-    android:padding="16dp">
+    android:orientation="horizontal"
+    android:padding="16dp"
+    android:weightSum="1">
 
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_weight="1"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/repo_name"
@@ -19,22 +19,34 @@
             android:layout_height="wrap_content"
             android:text="REPO NAME"
             android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="#0366d6"
-            />
+            android:textColor="#0366d6" />
 
-        <TextView
-            android:id="@+id/date_last_updated"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Last updated"/>
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Updated on " />
+
+            <TextView
+                android:id="@+id/date_last_updated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nov 16, 2017" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal">
 
 
         <TextView
@@ -48,23 +60,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forks:"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:text="Forks:" />
 
         <TextView
             android:id="@+id/fork_count"
-            android:paddingLeft="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="8dp"
+            android:text="0" />
 
     </LinearLayout>
-
-
-
-
-
 
 
 </LinearLayout>
